--- a/AppDocs/biblioteca/templates/base.html
+++ b/AppDocs/biblioteca/templates/base.html
@@ -1,6 +1,4 @@
 {% load static %} 
-
-
 <!DOCTYPE html>
 <html>
 <head>
@@ -8,9 +6,14 @@
     <!-- Agrega el enlace al archivo CSS de Bootstrap y estilos personalizados -->
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">     
     <link rel="stylesheet" href="{% static 'css/styles.css' %}">
+
+    <link rel="stylesheet" href="https://cdn.datatables.net/1.11.5/css/dataTables.bootstrap4.min.css">
+
+
 </head>
 <body>
 <div class="container content-wrapper">
+{% if user.is_authenticated %}
 <nav class="navbar navbar-expand-md navbar-light bg-light">
     <div class="container-fluid">
         <a class="navbar-brand" href="#">Repositorio de Archivos</a>
@@ -41,10 +44,23 @@
                     </ul>
                 </li>
                 <!-- Agrega más elementos de menú según tus necesidades -->
+                {% if user.is_authenticated %}
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Bienvenido, {{ user.username }}</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'logout' %}">Logout</a>
+                </li>
+                {% else %}
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'login' %}">Login</a>
+                </li>
+                {% endif %}
             </ul>
         </div>
     </div>
 </nav>
+{% endif %} 
 </div>
     
 <div class="container content-wrapper">
@@ -57,6 +73,10 @@
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.1/dist/umd/popper.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/js/bootstrap.bundle.min.js"></script>
+
+
+<script src="https://cdn.datatables.net/1.11.5/js/jquery.dataTables.min.js"></script>
+<script src="https://cdn.datatables.net/1.11.5/js/dataTables.bootstrap4.min.js"></script>   
     
 </body>
 </html>
