--- a/AppDocs/biblioteca/templates/login.html
+++ b/AppDocs/biblioteca/templates/login.html
@@ -1,12 +1,28 @@
-<!-- login.html -->
-
 {% extends 'base.html' %}
 
 {% block contenido %}
-<h1>Login</h1>
-<form method="post">
-  {% csrf_token %}
-  {{ form.as_p }}
-  <button type="submit">Iniciar sesión</button>
-</form>
+<div class="login-form">
+    <h1 class="text-center">Login</h1>
+    {% if error_message %}
+        <p class="text-center text-danger">{{ error_message }}</p>
+    {% endif %}
+    <form method="post">
+        {% csrf_token %}
+        <div class="form-group row">
+            <label for="username" class="col-sm-2 col-form-label">Nombre de usuario:</label>
+            <div class="col-sm-10">
+                <input type="text" id="username" name="username" class="form-control" required>
+            </div>
+        </div>
+        <div class="form-group row">
+            <label for="password" class="col-sm-2 col-form-label">Contraseña:</label>
+            <div class="col-sm-10">
+                <input type="password" id="password" name="password" class="form-control" required>
+            </div>
+        </div>
+        <div class="text-center">
+            <button type="submit" class="btn btn-primary">Login</button>
+        </div>
+    </form>
+</div>
 {% endblock %}
