--- a/AppDocs/biblioteca/templates/login.html
+++ b/AppDocs/biblioteca/templates/login.html
@@ -9,7 +9,7 @@
     <form method="post">
         {% csrf_token %}
         <div class="form-group row">
-            <label for="username" class="col-sm-2 col-form-label">Nombre de usuario:</label>
+            <label for="username" class="col-sm-2 col-form-label">Usuario:</label>
             <div class="col-sm-10">
                 <input type="text" id="username" name="username" class="form-control" required>
             </div>
