--- a/AppDocs/biblioteca/templates/base.html
+++ b/AppDocs/biblioteca/templates/base.html
@@ -21,19 +21,7 @@
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
-                {% if user.is_authenticated %}
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Bienvenido, {{ user.username }}</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="{% url 'logout' %}">Logout</a>
-                </li>
-                {% else %}
-                <li class="nav-item">
-                    <a class="nav-link" href="{% url 'login' %}">Login</a>
-                </li>
-                {% endif %}
+            <ul class="navbar-nav">                
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="propMenu" role="button" data-bs-toggle="dropdown" aria-expanded="false">Propietarios</a>
                     <ul class="dropdown-menu" aria-labelledby="propMenu">
@@ -55,10 +43,28 @@
                         <li><a class="nav-link" href="{% url 'listar_tipos_documentos' %}">Listar Tipos de Documentos</a></li>
                     </ul>
                 </li>
-                <!-- Agrega más elementos de menú según tus necesidades -->
+                <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    Chat- WSP
+                  </a>
+                  <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                    
+                    <li><a class="dropdown-item" href="{%url 'lista_conversaciones' %}">Listado de Chats</a></li>   
+                  </ul>
+              </li>
+                
 
             </ul>
         </div>
+        <div class="d-flex">
+            {% if request.user.is_authenticated %}
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a href="{% url 'logout' %}" class="btn btn-danger">Salir</a>
+                </li>
+            </ul>
+            {% endif %}
+          </div>
     </div>
 </nav>
 {% endif %} 
