--- a/AppDocs/biblioteca/templates/login.html
+++ b/AppDocs/biblioteca/templates/login.html
@@ -24,5 +24,8 @@
             <button type="submit" class="btn btn-primary">Login</button>
         </div>
     </form>
+
+    <!-- Botón para ir a la página de registro -->
+    <a href="{% url 'registro_usuario' %}" class="btn btn-primary mt-3">Registrarse</a>
 </div>
 {% endblock %}
