cambia boton de avatar

--- a/AppDocs/biblioteca/templates/base.html
+++ b/AppDocs/biblioteca/templates/base.html
@@ -64,10 +64,16 @@
                 <a href="{% url 'perfil' %}" class="btn btn-secondary">
                     <i class="fas fa-user"></i> Perfil
                 </a>
+                <a href="{% url 'subeavatar' %}" class="btn btn-secondary">
+                    <i class="fas fa-user"></i> Sube Avatar
+                </a>
+                
                 <a href="{% url 'logout' %}" class="btn btn-primary ms-2">
                     Salir
                 </a>
-                <li><a class="dropdown-item" href="{%url 'subeavatar' %}">Sube avatar</a></li>   
+
+
+                
             </div>
         
     </div>
