falta agragera las apps

--- a/AppDocs/biblioteca/templates/listar_propiedades.html
+++ b/AppDocs/biblioteca/templates/listar_propiedades.html
@@ -20,7 +20,7 @@
             <td>{{ propiedad.rol }}</td>
             <td>{{ propiedad.direccion }}</td>
             <td>
-                <a href="{% url 'detalle_propiedad' propiedad.pk %}" class="btn btn-primary">Ver detalles</a>
+                <a href="{% url 'detalle_propiedad' propiedad.pk %}" class="btn btn-primary">Ver Documentos</a>
                 <a href="{% url 'eliminar_propiedad' propiedad.pk %}" class="btn btn-danger">Eliminar</a>
                 <a href="{% url 'modificar_propiedad' propiedad.pk %}" class="btn btn-warning">Modificar</a>
             </td>
