--- a/AppDocs/biblioteca/static/css/styles.css
+++ b/AppDocs/biblioteca/static/css/styles.css
@@ -66,3 +66,20 @@
 .form-group {
     margin-bottom: 15px;
 }
+
+.social-links {
+    display: flex;
+    justify-content: center;
+    margin-top: 2rem;
+}
+
+.social-links a {
+    color: #333;
+    font-size: 1.5rem;
+    margin: 0 1rem;
+    transition: color 0.3s;
+}
+
+.social-links a:hover {
+    color: #007bff;
+}
