--- a/AppDocs/biblioteca/templates/base.html
+++ b/AppDocs/biblioteca/templates/base.html
@@ -12,7 +12,7 @@
 {% if user.is_authenticated %}
 <nav class="navbar navbar-expand-md navbar-light bg-light">
     <div class="container-fluid">
-        <a class="navbar-brand" href="{% url 'perfil' %}"> 
+        <a class="navbar-brand" href="{% url 'subeavatar' %}"> 
             {% if request.user.is_authenticated %}
             {% if request.user.avatar.imagen.url %}
             <img  class="rounded-circle" src="{{ request.user.avatar.imagen.url }}" style="max-width: 2em; margin-right: 20px;"></img>
@@ -61,11 +61,11 @@
         </div>
         <!-- Botón para el perfil de usuario -->
             <div class="text-end mt-3">
-                <a href="{% url 'perfil' %}" class="btn btn-secondary">
-                    <i class="fas fa-user"></i> Perfil
+                <a href="{% url 'about' %}" class="btn btn-secondary">
+                    <i class="fas fa-user"></i> About
                 </a>
                 <a href="{% url 'subeavatar' %}" class="btn btn-secondary">
-                    <i class="fas fa-user"></i> Sube Avatar
+                    <i class="fas fa-user"></i> Perfil
                 </a>
                 
                 <a href="{% url 'logout' %}" class="btn btn-primary ms-2">
