--- a/AppDocs/biblioteca/templates/registro_usuario.html
+++ b/AppDocs/biblioteca/templates/registro_usuario.html
@@ -26,14 +26,11 @@
                     <button type="submit" class="btn btn-primary">Registrarse</button>
                 </div>
             </form>
+            <div class="text-center mt-3">
+                <a href="{% url 'login' %}" class="btn btn-secondary">Iniciar sesión</a>
+            </div>
         </div>
     </div>
 </div>
 
 {% endblock %}
-
-
-
-
-
-
